[POLISH] buttons displayed in different styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-button [type]="'dark'" [label]="'hello'"></app-button>
+<div class="buttonContainer">
+  <app-button [type]="'light'" [label]="'hello'"></app-button>
+  <app-button [type]="'dark'" [label]="'hello'"></app-button>
+</div>
