--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+html, body {
+  max-height: 100%;
+  background-color: #f8f8f8;
+}
+
+* {
+  box-sizing: border-box;
+}
